# equinox-zoo

./: pyproject.toml
test/: transolver.py
zoo/: FNNs.py  _attention.py  transolver.py
