[project]
name = "equinox-zoo"
version = "0.1.0"
description = "Equinox model zoo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.20.0",
    "equinox>=0.11.12",
    "jaxtyping>=0.2.38",
    "pre-commit>=4.1.0",
    "pytest>=9.0.2",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["zoo/*"]

[tool.ruff.lint]
ignore = ["F722"]
